# fraud-detection-vector-db-mlops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docs/: project_summary.md
infra/mlflow/: Dockerfile
scripts/: make_sample_and_train.cmd  print_fraud_example_for_swagger.py  run_api.cmd  run_mcp_server.cmd  setup_windows.cmd  test_mcp_client.py  train_real_dataset.cmd
src/fraud_vector_db_mlops/: __init__.py  api.py  batch_predict.py  config.py  dashboard.py  data.py  drift.py  mcp_server.py  milvus_store.py  model.py  train.py  validation.py
tests/: test_data.py  test_model.py
